--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS layout class 10-17-2021</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div id="main">
+    <div id="header"> <h1>chania</h1>
 
     </div>
     <div id="maincontent">
